hphp/test/slow/shapes/idx_arr_compat.php.expectf
dict(1) {
  ["x"]=>
  int(1)
}
int(1)
dict(1) {
  ["x"]=>
  int(1)
}
int(1)
vec(2) {
  bool(true)
  bool(false)
}

Catchable fatal error: Argument 1 to HH\Shapes::idx() must be of type ?HH\%rdarray|dict%r, HH\vec given in %s/idx_arr_compat.php on line 14
